setting up <confirm password verification> from backend. Context for keeping values after post request has been implemented

--- a/backend/templates/authentication/register.html
+++ b/backend/templates/authentication/register.html
@@ -14,14 +14,14 @@
               <form action="{% url 'register' %}" method="POST">
                   {% csrf_token %}
                 <div class="inputBox">
-                  <input type="text" name="username" required="" id="usernameField">
+                  <input type="text" name="username" value="{{field_values.username}}" required="" id="usernameField">
                   <label>Username</label>
                 </div>
                   <div class="invalid-feedback invalid_feedback" style="display: none;"></div>
                   <p class="text-sm text-success usernameSuccess"></p>
 
                 <div class="inputBox">
-                    <input type="email" name="email" required="" id="emailField">
+                    <input type="email" name="email" value="{{field_values.email}}" required="" id="emailField">
                     <label>Email</label>
                 </div>
                   <div class="invalid-feedback emailFeedbackArea" style="display: none;"></div>
