--- a/backend/medflow/static/css/authentication/styles.css
+++ b/backend/medflow/static/css/authentication/styles.css
@@ -257,3 +257,36 @@ body {
 }
 
 /*Alerts*/
+
+/*success, info, error classes*/
+
+.text-success {
+  color: #3c763d;
+}
+a.text-success:hover,
+a.text-success:focus {
+  color: #2b542c;
+}
+.text-info {
+  color: #31708f;
+}
+a.text-info:hover,
+a.text-info:focus {
+  color: #245269;
+}
+.text-warning {
+  color: #8a6d3b;
+}
+a.text-warning:hover,
+a.text-warning:focus {
+  color: #66512c;
+}
+.text-danger {
+  color: #a94442;
+}
+a.text-danger:hover,
+a.text-danger:focus {
+  color: #843534;
+}
+
+/*success, info, error classes*/
